# PawnyOwl

./: .gitignore  Cargo.toml  LICENSE  README.md
base/: Cargo.toml
base/src/: bitboard.rs  core.rs  geometry.rs  lib.rs
board/: Cargo.toml  build.rs
board/benches/: chess.rs
board/src/: attack.rs  between.rs  board.rs  castling.rs  diff.rs  generic.rs  lib.rs  movegen.rs  moves.rs  pawns.rs  selftest.rs  zobrist.rs
board/tests/: selftest.rs  test_perft.rs  test_selftest.rs
eval/: Cargo.toml
eval/src/: evaluator.rs  lib.rs  model.rs  score.rs
eval/src/layers/: feature.rs
incbin/: model.paw
pawnyowl/: Cargo.toml
pawnyowl/src/: lib.rs  main.rs
pawnyowl/src/core/: mod.rs  opts.rs
pawnyowl/src/engine/: mod.rs
pawnyowl/src/eval/: mod.rs  model.rs  score.rs
pawnyowl/src/eval/layers/: feature.rs
pawnyowl/src/intf/: mod.rs  opts.rs  score.rs
pawnyowl/src/uci/: comm.rs  io.rs  mod.rs  sanitize.rs  util.rs
tools/learner/: Cargo.toml
tools/learner/src/: dataset.rs  learn.rs  main.rs
