[package]
name = "pawnyowl_board"
edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
pawnyowl_base = { path = "../base", version = "0.1.0" }
thiserror = "2.0.11"

[build-dependencies]
pawnyowl_base = { path = "../base", version = "0.1.0" }
rand_xoshiro = "0.7.0"
rand_core = "0.9.3"
