[package]
name = "pawnyowl_board"
edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
pawnyowl_base = { path = "../base", version = "0.1.0" }
thiserror = "2.0.11"
arrayvec = "0.7.6"

[build-dependencies]
pawnyowl_base = { path = "../base", version = "0.1.0" }
rand_xoshiro = "0.7.0"
rand_core = "0.9.3"

[dev-dependencies]
criterion = "0.5.1"
sha2 = "0.10.8"
hex-literal = "1.0.0"

[[bench]]
name = "chess"
harness = false
