[package]
name = "pawnyowl_eval"
edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
pawnyowl_board = { path = "../board", version = "0.1.0" }
anyhow = "1.0.97"
bincode = "1.3"
derive_more = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.1"
